--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,31 +11,36 @@
         android:id="@+id/dl_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <android.support.v7.widget.Toolbar
                 android:id="@+id/tl_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <ImageView
+                    android:id="@+id/iv_option"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
                     android:src="@mipmap/option" />
 
                 <ImageView
+                    android:id="@+id/iv_award"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
                     android:layout_gravity="right"
                     android:layout_marginRight="6dp"
                     android:src="@mipmap/award" />
             </android.support.v7.widget.Toolbar>
+
             <FrameLayout
                 android:id="@+id/fl_content"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
