--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,10 @@
     <declare-styleable name="CircleWidget">
         <attr name="ring_radii" format="dimension"/>
         <attr name="ring_width" format="dimension"/>
+        <attr name="bottom_color" format="color"/>
+        <attr name="top_color" format="color"/>
+        <attr name="min_progress" format="integer"/>
+        <attr name="min_top_color" format="color"/>
     </declare-styleable>
 
 </resources>
