--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -5,6 +5,7 @@
     <item
         android:id="@+id/menu_main"
         android:checkable="true"
+        android:icon="@mipmap/ic_launcher"
         android:title="@string/main_page" />
 
     <item
