--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#04d6a9">
+    android:background="#008695">
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/dl_container"
@@ -26,6 +26,7 @@
                     android:id="@+id/iv_option"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
+                    android:padding="6dp"
                     android:src="@mipmap/option" />
 
                 <ImageView
@@ -34,6 +35,7 @@
                     android:layout_height="36dp"
                     android:layout_gravity="right"
                     android:layout_marginRight="6dp"
+                    android:padding="6dp"
                     android:src="@mipmap/award" />
             </android.support.v7.widget.Toolbar>
 
@@ -49,8 +51,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="@android:color/white"
+            android:background="@color/base_background"
             android:checkableBehavior="single"
+            app:itemTextColor="@color/text_color"
+            app:itemIconTint="@color/text_color"
             app:menu="@menu/navigation_menu" />
         <!--app:headerLayout="@layout/drawer_header"-->
 
