--- a/app/src/main/res/layout/activity_time_down.xml
+++ b/app/src/main/res/layout/activity_time_down.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff">
+    android:background="@color/base_background"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-    <ImageView
+    <cn.kisoo.forest.view.CircleWidget
         android:id="@+id/cw_widget"
-        android:layout_width="260dp"
-        android:layout_height="260dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="90dp"/>
+        android:layout_marginTop="20dp"
+        app:bottom_color="#6ADBE8"
+        app:min_top_color="#FF939C"
+        app:pic_padding="0dp"
+        app:ring_radii="130dp"
+        app:ring_width="13dp"
+        app:top_color="#006E7A"
+        app:touchable="false" />
 
     <TextView
         android:id="@+id/tv_direction"
@@ -20,17 +29,20 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/cw_widget"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp"
-        android:textSize="25sp"
+        android:layout_marginTop="20dp"
+        android:textColor="#ffffff"
+        android:textSize="28sp"
+        android:textStyle="bold"
         tools:text="120:00" />
 
     <Button
-        android:id="@+id/btn_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_direction"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="6dp"
-        android:text="@string/cancel" />
+        android:id="@+id/btn_cancel"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/round_button"
+        android:text="@string/cancel"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
 
-</RelativeLayout>
+</LinearLayout>
