--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -5,12 +5,13 @@
     <item
         android:id="@+id/menu_main"
         android:checkable="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/page_main"
         android:title="@string/main_page" />
 
     <item
         android:id="@+id/menu_setting"
         android:checkable="false"
+        android:icon="@mipmap/settings"
         android:title="@string/setting" />
 
 
