--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/base_background</item>
         <item name="colorPrimaryDark">@color/base_background</item>
         <item name="colorAccent">@color/base_background</item>
+        <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@color/base_background</item>
     </style>
     <declare-styleable name="CircleWidget">
