--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:title="@string/register"
+        app:titleTextColor="#FFFFFF" />
+
+    <ImageView
+        android:id="@+id/iv_head"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@mipmap/pic_center_100_percent" />
+
+    <EditText
+        android:id="@+id/et_name"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit_back"
+        android:drawableLeft="@mipmap/name"
+        android:hint="@string/please_input_name"
+        android:padding="6dp"
+        android:textColor="#ffffff"
+        android:textColorHint="#FFFFFF"
+        tools:text="桥寻" />
+
+    <EditText
+        android:id="@+id/et_school_num"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/edit_back"
+        android:drawableLeft="@mipmap/school"
+        android:hint="@string/please_input_school_num"
+        android:inputType="number"
+        android:padding="6dp"
+
+        android:textColor="#ffffff"
+        android:textColorHint="#FFFFFF"
+        tools:text="2014214038" />
+
+    <EditText
+        android:id="@+id/et_account"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/edit_back"
+        android:drawableLeft="@mipmap/account"
+        android:hint="@string/please_input_account"
+        android:padding="6dp"
+        android:textColor="#ffffff"
+        android:textColorHint="#FFFFFF"
+        tools:text="coderkisoo" />
+
+    <EditText
+        android:id="@+id/et_password"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/edit_back"
+        android:drawableLeft="@mipmap/password"
+        android:hint="@string/please_input_pwd"
+        android:inputType="textPassword"
+        android:padding="6dp"
+        android:textColor="#ffffff"
+        android:textColorHint="#FFFFFF" />
+
+    <TextView
+        android:id="@+id/tv_go_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="12dp"
+        android:padding="4dp"
+        android:text="@string/go_login"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp" />
+
+    <Button
+        android:id="@+id/btn_register"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/round_button"
+        android:text="@string/register"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
 
 </LinearLayout>
