--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,9 +15,10 @@
 
     <ImageView
         android:id="@+id/iv_head"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="40dp"
         android:src="@mipmap/pic_center_100_percent" />
 
     <EditText
@@ -27,12 +28,18 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/edit_back"
+        android:background="@drawable/white_edit_background"
         android:drawableLeft="@mipmap/name"
+        android:drawablePadding="4dp"
         android:hint="@string/please_input_name"
+        android:imeOptions="actionNext"
+        android:maxLines="1"
+        android:nextFocusForward="@+id/et_school_num"
         android:padding="6dp"
+        android:singleLine="true"
         android:textColor="#ffffff"
         android:textColorHint="#FFFFFF"
+        android:textCursorDrawable="@drawable/white_edit_cursor"
         tools:text="桥寻" />
 
     <EditText
@@ -42,14 +49,19 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/edit_back"
+        android:background="@drawable/white_edit_background"
         android:drawableLeft="@mipmap/school"
+        android:drawablePadding="4dp"
         android:hint="@string/please_input_school_num"
+        android:imeOptions="actionNext"
         android:inputType="number"
+        android:maxLines="1"
+        android:nextFocusForward="@+id/et_account"
         android:padding="6dp"
-
+        android:singleLine="true"
         android:textColor="#ffffff"
         android:textColorHint="#FFFFFF"
+        android:textCursorDrawable="@drawable/white_edit_cursor"
         tools:text="2014214038" />
 
     <EditText
@@ -59,12 +71,18 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/edit_back"
+        android:background="@drawable/white_edit_background"
         android:drawableLeft="@mipmap/account"
+        android:drawablePadding="4dp"
         android:hint="@string/please_input_account"
+        android:imeOptions="actionNext"
+        android:maxLines="1"
+        android:nextFocusForward="@+id/et_password"
         android:padding="6dp"
+        android:singleLine="true"
         android:textColor="#ffffff"
         android:textColorHint="#FFFFFF"
+        android:textCursorDrawable="@drawable/white_edit_cursor"
         tools:text="coderkisoo" />
 
     <EditText
@@ -74,13 +92,38 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/edit_back"
+        android:background="@drawable/white_edit_background"
         android:drawableLeft="@mipmap/password"
+        android:drawablePadding="4dp"
         android:hint="@string/please_input_pwd"
+        android:imeOptions="actionNext"
         android:inputType="textPassword"
+        android:maxLines="1"
+        android:nextFocusForward="@+id/et_password2"
         android:padding="6dp"
+        android:singleLine="true"
         android:textColor="#ffffff"
-        android:textColorHint="#FFFFFF" />
+        android:textColorHint="#FFFFFF"
+        android:textCursorDrawable="@drawable/white_edit_cursor" />
+
+    <EditText
+        android:id="@+id/et_password2"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/white_edit_background"
+        android:drawableLeft="@mipmap/password2"
+        android:drawablePadding="4dp"
+        android:hint="@string/please_input_pwd2"
+        android:inputType="textPassword"
+        android:maxLines="1"
+        android:padding="6dp"
+        android:singleLine="true"
+        android:textColor="#ffffff"
+        android:textColorHint="#FFFFFF"
+        android:textCursorDrawable="@drawable/white_edit_cursor" />
 
     <TextView
         android:id="@+id/tv_go_login"
