--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,10 +14,10 @@
 
     <ImageView
         android:id="@+id/iv_head"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="40dp"
-        android:src="@mipmap/pic_center_100_percent" />
+        android:src="@mipmap/head_7" />
 
     <EditText
         android:id="@+id/et_account"
