--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -9,6 +9,13 @@
         android:title="@string/main_page" />
 
     <item
+        android:id="@+id/menu_school_timetables"
+        android:checkable="false"
+        android:icon="@mipmap/school_timetables"
+        android:title="@string/school_timetables" />
+
+
+    <item
         android:id="@+id/menu_setting"
         android:checkable="false"
         android:icon="@mipmap/settings"
