--- a/app/src/main/res/layout/activity_update_password.xml
+++ b/app/src/main/res/layout/activity_update_password.xml
@@ -21,6 +21,7 @@
         android:theme="@style/TextInputLayout">
 
         <EditText
+            android:id="@+id/et_password1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -44,6 +45,7 @@
         android:theme="@style/TextInputLayout">
 
         <EditText
+            android:id="@+id/et_password2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -67,6 +69,7 @@
         android:theme="@style/TextInputLayout">
 
         <EditText
+            android:id="@+id/et_password3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
