--- a/app/src/main/res/layout/activity_update_name.xml
+++ b/app/src/main/res/layout/activity_update_name.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -17,22 +17,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:theme="@style/TextInputLayout"
-        android:textColorHint="#FFFFFF">
+        android:textColorHint="#FFFFFF"
+        android:theme="@style/TextInputLayout">
 
         <EditText
+            android:id="@+id/et_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:drawableLeft="@mipmap/name"
-            android:drawablePadding="4dp"
+            android:drawablePadding="10dp"
             android:hint="@string/please_input_name"
             android:singleLine="true"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
             android:textCursorDrawable="@drawable/white_cursor"
-            android:theme="@style/WhiteBackgroundEditText"
-            android:textSize="22sp" />
+            android:textSize="22sp"
+            android:theme="@style/WhiteBackgroundEditText" />
     </android.support.design.widget.TextInputLayout>
 </LinearLayout>
