update activitys with layoutId

--- a/app/src/main/res/layout/activity_update_password.xml
+++ b/app/src/main/res/layout/activity_update_password.xml
@@ -29,6 +29,7 @@
             android:drawableLeft="@mipmap/password"
             android:drawablePadding="10dp"
             android:hint="@string/old_password"
+            android:inputType="textPassword"
             android:singleLine="true"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
@@ -53,6 +54,7 @@
             android:drawableLeft="@mipmap/password2"
             android:drawablePadding="10dp"
             android:hint="@string/new_password"
+            android:inputType="textPassword"
             android:singleLine="true"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
@@ -76,7 +78,8 @@
             android:layout_marginRight="10dp"
             android:drawableLeft="@mipmap/password2"
             android:drawablePadding="10dp"
-            android:hint="@string/new_password"
+            android:hint="@string/confirm_password"
+            android:inputType="textPassword"
             android:singleLine="true"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
