--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:title="@string/register"
+        android:id="@+id/tl_title"
         app:titleTextColor="#FFFFFF" />
 
     <ImageView
