--- a/app/src/main/res/layout/head_selector.xml
+++ b/app/src/main/res/layout/head_selector.xml
@@ -5,5 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:numColumns="4"
-    android:padding="2dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     tools:listitem="@layout/item_head_selector" />
