setting page done

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
                 android:layout_height="wrap_content"
                 app:navigationContentDescription="@string/option"
                 app:navigationIcon="@mipmap/option"
-                app:title=" ">
+                app:titleTextColor="@color/white">
 
             </android.support.v7.widget.Toolbar>
 
