--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -235,6 +235,27 @@
         android:background="@color/progress_background" />
 
     <TextView
+        android:id="@+id/tv_upload_settings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:background="@drawable/textview_ripple"
+        android:paddingBottom="12dp"
+        android:paddingLeft="24dp"
+        android:paddingRight="12dp"
+        android:paddingTop="12dp"
+        android:text="上传偏好设置"
+        android:textColor="@color/white"
+        android:textSize="18sp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@color/progress_background" />
+
+    <TextView
         android:id="@+id/tv_logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -244,7 +265,7 @@
         android:paddingLeft="24dp"
         android:paddingRight="12dp"
         android:paddingTop="12dp"
-        android:text="退出"
+        android:text="退出登录"
         android:textColor="@color/white"
         android:textSize="18sp" />
 
